@@ -1,4 +1,4 @@
-.Dd November 8, 2012
+.Dd November 9, 2012
 .Dt libbde 3
 .Os libbde
 .Sh NAME
